[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/videos/Presentazione caso.webm" type="VideoStream" id=1]
[ext_resource path="res://scenes/Intro.gd" type="Script" id=2]
[ext_resource path="res://assets/phone_records/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/KALAM-REGULAR.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 1 )

[node name="btn_start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -95.5
margin_right = 640.0
margin_bottom = 95.5
focus_mode = 0
custom_fonts/font = SubResource( 2 )
text = "Avvia la presentazione del caso da risolvere"
flat = true
expand_icon = true

[node name="btn_search" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 456.5
margin_top = -85.0
margin_right = 599.5
margin_bottom = -32.0
color = Color( 0.352941, 0.607843, 0.835294, 1 )

[node name="btn_skip" type="Button" parent="btn_search"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "SALTA"
flat = true
expand_icon = true

[node name="btn_replay" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 304.5
margin_top = -85.0
margin_right = 447.5
margin_bottom = -32.0
color = Color( 0.352941, 0.607843, 0.835294, 1 )

[node name="btn" type="Button" parent="btn_replay"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "RIGIOCARE"
flat = true
expand_icon = true
